tests/__snapshots__/validation-type-errors-describe-level-errors-stderr.snap.txt
Error: Expected 2 arguments, but got 1. ts(2554)

  12 | 
  13 | describe("reported type error?", () => {
> 14 |   test("with type error");
     |   ^
  15 | 
  16 |   test("looks at this test?", () => {
  17 |     expect<number>().type.toBeNumber();

       at ./__typetests__/describe-level.tst.ts:14:3

